# pytest-compare

./: CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  release.sh  requirements-dev.txt  requirements-quality.txt  requirements-release.txt  test_coverage.sh  tox.ini
.github/workflows/: deploy_docs.yml  merge_master.yml  release.yml  tests.yml
docs/: contributing.md  documentation.md  index.md  installation.md  license.md  usage.md
hooks/: autohook.sh
hooks/pre-commit/: 01-run-black  02-run-mypy  03-run-flake8  04-run-codespell
pytest_compare/: base.py
pytest_compare/dataframe/: __init__.py  dataframe.py
pytest_compare/dict/: __init__.py  dict.py
pytest_compare/native/: __init__.py  native.py
pytest_compare/pandas/: __init__.py  pandas.py
tests/: base_test.py  conftest.py
tests/dataframe/: conftest.py  test_dataframe.py
tests/dict/: conftest.py
tests/dict/dict_contains/: conftest.py  test_dict_contains.py
tests/dict/dict_keys/: test_dict_keys.py
tests/pandas/: conftest.py  test_pandas.py
tests/test_dict/test_dict_contains/: conftest.py  test_dict_contains.py
tests/test_dict/test_dict_keys/: conftest.py
tests/test_native/test_compare_in/: conftest.py  test_compare_in.py
tests/test_native/test_compare_is_instance_of/: conftest.py  test_compare_is_instance_of.py
tests/test_native/test_compare_is_subclass_of/: conftest.py  test_compare_is_subclass_of.py
tests/test_native/test_compare_length/: conftest.py  test_compare_length.py
tests/test_native/test_compare_substring/: conftest.py  test_compare_substring.py
tests/test_native/test_compare_type/: conftest.py  test_compare_type.py
tests/test_pandas/: conftest.py
tests/test_pandas/test_compare_dataframe/: conftest.py
tests/test_pandas/test_compare_dataframe_columns/: conftest.py  test_compare_dataframe_columns.py
tests/test_pandas/test_compare_series/: conftest.py
tests/test_pandas/test_dataframe/: test_pandas.py
tests/test_pandas/test_series/: conftest.py  test_series.py
